added hyperlink to main EMR logo

--- a/02/domain_dashboard.html
+++ b/02/domain_dashboard.html
@@ -12,7 +12,9 @@
 
 
   <div style="text-align: center;">
-  <img src="../images/EMR-LOGO-RGB.png" class="emr-logo" alt="EMR Logo">
+  <a href="https://nhwoodsaa.github.io/">
+		<img src="../images/EMR-LOGO-RGB.png" class="emr-logo" alt="EMR Logo">
+    </a>
 	<h3>Domain Dashboard</h3>
     <table id="domainDetailsTable" border="1">
       <thead>
