--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <img src="images/EMR-LOGO-RGB.png" class="emr-logo" alt="EMR Logo">
-    <div id="navbar-container"></div> <!--Placeholder Nav Bar, replaced by JS-->
+    <a href="https://nhwoodsaa.github.io/">
+		<img src="images/EMR-LOGO-RGB.png" class="emr-logo" alt="EMR Logo">
+    </a>
+	<div id="navbar-container"></div> <!--Placeholder Nav Bar, replaced by JS-->
 	<div class="blurb-bg">
 		<p>
 			Welcome to the EMR Analyst Helper website!<br><br>
