colour changes, updated blurb and headings

--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -15,17 +15,18 @@
 	<a href="https://nhwoodsaa.github.io/">
 		<img src="../images/EMR-LOGO-RGB.png" class="emr-logo" alt="EMR Logo">
     </a>
-	
-	<h1 id="page-title">
-	Cherwell Service Requests / Incident Responses
-	</h1>
-	<p id="page-description" class="section-paragraph">
-	Click on the relevant issue detailed below to be taken to a generic response which you can copy to your clipboard and paste into the Cherwell resolution field. 
-	Enter your name and the customers name below to have this data automatically populate in the message. 
-	<br>
-	<b>NOTE: Some responses will have placeholder text which needs to be overwritten.</b>
-	</p>
-
+	<div class="heading-bg-alone">
+		<h1 class="heading">
+			Cherwell Service Requests / Incident Responses
+		</h1>
+	</div>
+	<div class="blurb-bg">
+		<p id="page-description" class="section-paragraph">
+			Click on the relevant issue detailed below to be taken to a generic response which you can copy to your clipboard and paste into the Cherwell resolution field. 
+			Enter your name and the customers name below to have this data automatically populate in the message. 
+			<b>NOTE: Some responses will have placeholder text which needs to be overwritten.</b>
+		</p>
+	</div>
 	<div id="main-content">
 	<div class="input-container" id="input-names">
 		<div id="input-names">
