--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			Additionally, there are some helpful links below.
 		</p>
 	</div>
-	<div class="heading-bg">
+	<div class="heading-bg-top">
     <h1 class="heading">Helpful Links</h1>
 	</div>
 	<div class="button-bg">
