--- a/02/domain_dashboard.html
+++ b/02/domain_dashboard.html
@@ -15,8 +15,10 @@
   <a href="https://nhwoodsaa.github.io/">
 		<img src="../images/EMR-LOGO-RGB.png" class="emr-logo" alt="EMR Logo">
     </a>
-	<h3>Domain Dashboard</h3>
-    <table id="domainDetailsTable" border="1">
+	<div class="heading-bg-alone">
+	<h1 class="heading">Domain Dashboard</h3>
+    </div>
+	<table id="domainDetailsTable" border="1">
       <thead>
         <tr>
           <th>Domain</th>
