changed title tile css classes for all pages

--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -12,10 +12,14 @@
 </head>
 <body>
     <div id="navbar-container"></div> <!--Placeholder Nav Bar, replaced by JS-->
+	
+	<div class="logo-bg">
 	<a href="https://nhwoodsaa.github.io/">
 		<img src="../images/EMR-LOGO-RGB.png" class="emr-logo" alt="EMR Logo">
     </a>
-	<div class="heading-bg-alone">
+	</div>
+	
+	<div class="title-bg">
 		<h1 class="heading">
 			Cherwell Service Requests / Incident Responses
 		</h1>
