--- a/02/domain_dashboard.html
+++ b/02/domain_dashboard.html
@@ -12,28 +12,36 @@
 
 
   <div style="text-align: center;">
-  <a href="https://nhwoodsaa.github.io/">
-		<img src="../images/EMR-LOGO-RGB.png" class="emr-logo" alt="EMR Logo">
-    </a>
-	<div class="heading-bg-alone">
-	<h1 class="heading">Domain Dashboard</h3>
-    </div>
-	<table id="domainDetailsTable" border="1">
-      <thead>
-        <tr>
-          <th>Domain</th>
-          <th>Status</th>
-          <th>Comment</th>
-          <th>Purpose</th>
-		  <th>iPM Connection</th>
-		  <th>Outage From</th>
-		  <th>Outage To</th>
-        </tr>
-      </thead>
-      <tbody id="domainDetails">
-        <!-- Domain details will be populated here by JavaScript -->
-      </tbody>
-    </table>
+	<!-- Title Tile Start-->
+	<div class="logo-bg">
+		<a href="https://nhwoodsaa.github.io/">
+			<img src="../images/EMR-LOGO-RGB.png" class="emr-logo" alt="EMR Logo">
+		</a>
+	</div>
+	<div class="title-bg">
+		<h1 class="heading">
+			Domain Dashboard
+		</h1>
+	</div>
+	<!-- Title Tile End -->
+	<div style="padding:20px">
+		<table id="domainDetailsTable" border="1">
+		  <thead>
+			<tr>
+			  <th>Domain</th>
+			  <th>Status</th>
+			  <th>Comment</th>
+			  <th>Purpose</th>
+			  <th>iPM Connection</th>
+			  <th>Outage From</th>
+			  <th>Outage To</th>
+			</tr>
+		  </thead>
+		  <tbody id="domainDetails">
+			<!-- Domain details will be populated here by JavaScript -->
+		  </tbody>
+		</table>
+	</div>
   </div>
   <br><br><br>
 
