--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <a href="https://nhwoodsaa.github.io/">
-		<img src="images/EMR-LOGO-RGB.png" class="emr-logo" alt="EMR Logo">
-    </a>
+	<!-- Title Tile Start -->
 	<div id="navbar-container"></div> <!--Placeholder Nav Bar, replaced by JS-->
+		<div class="logo-bg">
+		<a href="https://nhwoodsaa.github.io/">
+			<img src="images/EMR-LOGO-RGB.png" class="emr-logo" alt="EMR Logo">
+		</a>
+	</div>
+	<div class="title-bg">
+		<h1 class="heading">
+			EMR Analyst Helper
+		</h1>
+	</div>
+	<!-- Title Tile End -->
+	
 	<div class="blurb-bg">
 		<p>
 			Welcome to the EMR Analyst Helper website!<br><br>
