updated comments and css style names
Need to get organised before you have to many styles to keep track of

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</div>
 	<!-- Title Tile End -->
 	
-	<div class="blurb-bg">
+	<div class="blurb">
 		<p>
 			Welcome to the EMR Analyst Helper website!<br><br>
 			This site is a work in progress. If you have any suggestions, please reach out.
@@ -32,10 +32,10 @@
 			Additionally, there are some helpful links below.
 		</p>
 	</div>
-	<div class="heading-bg-top">
+	<div class="helpful-links-header">
     <h1 class="heading">Helpful Links</h1>
 	</div>
-	<div class="button-bg">
+	<div class="helpful-links-body">
 		<div class="grid-container">
 			<div class="grid-item">
 				<a href="https://wiki.cerner.com/display/public/reference/Reference+Pages+Home" target="_blank">
