--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -12,19 +12,19 @@
 </head>
 <body>
     <div id="navbar-container"></div> <!--Placeholder Nav Bar, replaced by JS-->
-	
+	<!-- Title Tile Start-->
 	<div class="logo-bg">
-	<a href="https://nhwoodsaa.github.io/">
-		<img src="../images/EMR-LOGO-RGB.png" class="emr-logo" alt="EMR Logo">
-    </a>
+		<a href="https://nhwoodsaa.github.io/">
+			<img src="../images/EMR-LOGO-RGB.png" class="emr-logo" alt="EMR Logo">
+		</a>
 	</div>
-	
 	<div class="title-bg">
 		<h1 class="heading">
 			Cherwell Service Requests / Incident Responses
 		</h1>
 	</div>
-	<div class="blurb-bg">
+	<!-- Title Tile End -->
+	<div class="blurb">
 		<p id="page-description" class="section-paragraph">
 			Click on the relevant issue detailed below to be taken to a generic response which you can copy to your clipboard and paste into the Cherwell resolution field. 
 			Enter your name and the customers name below to have this data automatically populate in the message. 
