fixed rendering issue with js
added new div to correct ID so its hidden by JS. Also removed padding on the detail-view to stop horizontal scroll bar appearing

--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -24,7 +24,7 @@
 		</h1>
 	</div>
 	<!-- Title Tile End -->
-	<div class="blurb">
+	<div id="page-description" class="blurb">
 		<p id="page-description" class="section-paragraph">
 			Click on the relevant issue detailed below to be taken to a generic response which you can copy to your clipboard and paste into the Cherwell resolution field. 
 			Enter your name and the customers name below to have this data automatically populate in the message. 
