--- a/navbar.html
+++ b/navbar.html
@@ -7,6 +7,7 @@
 		<ul class="navbar-links" id="navbar-links">
 			<li><a href="https://nhwoodsaa.github.io/01/cherwell_responses.html">Cherwell Responses</a></li>
 			<li><a href="https://nhwoodsaa.github.io/02/domain_dashboard.html">Domain Dashboard</a></li>
+			<li><a href="mailto:github@aw9.dev?subject=EMR Analyst Helper Suggestions">Suggestions</a></li>
 		</ul>
 		<div class="mobile-menu-toggle" id="mobile-menu-toggle">
 			<span></span>
