--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -65,6 +65,7 @@
 			<div class="tile2" onclick="showDetail(2007)">Statistical discharge incorrectly</div>
 			<div class="tile2" onclick="showDetail(2008)">Doesn't know how to use MyExperience</div>
 			<div class="tile2" onclick="showDetail(2009)">Statistical Admission + Preadmit did not merge</div>
+			<div class="tile2" onclick="showDetail(2010)">Doesn't understand HITH workflow from ED</div>
 		</div>
 		<div class="separator"></div>
 		<h2>Care Delivery Responses</h2>
