added unable to cosign

--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -52,6 +52,7 @@
 			<div class="tile" onclick="showDetail(1004)">Close an Incident and move to Problem ticket</div>
 			<div class="tile" onclick="showDetail(1005)">Generic Incidents Resolved</div>
 			<div class="tile" onclick="showDetail(1006)">Failure to respond within timeframe</div>
+			<div class="tile" onclick="showDetail(1007)">Unable to co-sign</div>
 		</div>
 		<div class="separator"></div>
 		<h2>Core Responses</h2>
