--- a/navbar.html
+++ b/navbar.html
@@ -5,8 +5,8 @@
 			<a href="https://nhwoodsaa.github.io/" class="brand-link"><img src="https://nhwoodsaa.github.io/images/EMR-LOGO-RGB.png" alt="Home" width="50"></a>
 		</div>
 		<ul class="navbar-links" id="navbar-links">
-			<li><a href="https://nhwoodsaa.github.io/01/cherwell_responses.html">Cherwell Responses</a></li>
-			<li><a href="https://nhwoodsaa.github.io/02/domain_dashboard.html">Domain Dashboard</a></li>
+			<li><a href="https://nhwoodsaa.github.io/01/cherwell_responses">Cherwell Responses</a></li>
+			<li><a href="https://nhwoodsaa.github.io/02/domain_dashboard">Domain Dashboard</a></li>
 			<li><a href="mailto:github@aw9.dev?subject=EMR Analyst Helper Suggestions">Suggestions</a></li>
 		</ul>
 		<div class="mobile-menu-toggle" id="mobile-menu-toggle">
